# coding_challenges

./: CMakeLists.txt  README.md  glfw_demo.cpp  im_gui_demo.cpp  main.cpp
challenges/euler/: all_euler_solutions.h  euler_test_cases.cpp
challenges/euler/_problem_template_n/: problem_n.cpp  problem_n.h
challenges/euler/problem_1/: problem_1.cpp  problem_1.h
challenges/euler/problem_2/: problem_2.cpp  problem_2.h
challenges/euler/problem_3/: problem_3.cpp  problem_3.h
challenges/euler/problem_4/: problem_4.cpp  problem_4.h
challenges/euler/problem_5/: problem_5.cpp  problem_5.h
challenges/euler/problem_6/: problem_6.cpp  problem_6.h
guis/: gui_manager.cpp  gui_manager.h  guis.h  imgui_glfw_setup.cpp  imgui_glfw_setup.h  precompile_header.h
guis/demos/: multiple_logger_demo.cpp  simple_logger_demo.cpp
guis/widgets/: gui_logger.cpp  gui_logger.h
utils/: precompile_header.h  prime_utils.cpp  prime_utils.h  std_extensions.h  utils.h
utils/console/: progress_bar.h
utils/guis/: imgui_glfw_setup.h  progress_bar.h  progress_log_window.h  ui_manager.cpp  ui_manager.h
utils_tests/: prime_utils_tests.cpp
